--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -595,6 +595,11 @@ video {
   position: relative;
 }
 
+.sticky{
+  position: -webkit-sticky;
+  position: sticky;
+}
+
 .top-0{
   top: 0px;
 }
@@ -611,6 +616,38 @@ video {
   right: 0px;
 }
 
+.top-6{
+  top: 1.5rem;
+}
+
+.left-6{
+  left: 1.5rem;
+}
+
+.-top-6{
+  top: -1.5rem;
+}
+
+.top-10{
+  top: 2.5rem;
+}
+
+.top-1{
+  top: 0.25rem;
+}
+
+.top-16{
+  top: 4rem;
+}
+
+.top-24{
+  top: 6rem;
+}
+
+.left-40{
+  left: 10rem;
+}
+
 .z-20{
   z-index: 20;
 }
@@ -619,8 +656,32 @@ video {
   z-index: -10;
 }
 
+.z-50{
+  z-index: 50;
+}
+
+.z-10{
+  z-index: 10;
+}
+
 .m-6{
   margin: 1.5rem;
+}
+
+.m-10{
+  margin: 2.5rem;
+}
+
+.m-4{
+  margin: 1rem;
+}
+
+.m-5{
+  margin: 1.25rem;
+}
+
+.m-3{
+  margin: 0.75rem;
 }
 
 .mx-auto{
@@ -628,24 +689,40 @@ video {
   margin-right: auto;
 }
 
-.mb-20{
-  margin-bottom: 5rem;
-}
-
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-
 .mb-16{
   margin-bottom: 4rem;
+}
+
+.mr-3{
+  margin-right: 0.75rem;
+}
+
+.mr-4{
+  margin-right: 1rem;
 }
 
 .block{
   display: block;
 }
 
+.inline-block{
+  display: inline-block;
+}
+
+.inline{
+  display: inline;
+}
+
 .flex{
   display: flex;
+}
+
+.inline-flex{
+  display: inline-flex;
+}
+
+.table{
+  display: table;
 }
 
 .hidden{
@@ -672,8 +749,32 @@ video {
   height: 1.5rem;
 }
 
-.max-h-96{
-  max-height: 24rem;
+.h-1\/2{
+  height: 50%;
+}
+
+.h-3\/5{
+  height: 60%;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.h-4\/5{
+  height: 80%;
+}
+
+.h-1\/5{
+  height: 20%;
+}
+
+.h-36{
+  height: 9rem;
+}
+
+.h-40{
+  height: 10rem;
 }
 
 .min-h-screen{
@@ -692,12 +793,12 @@ video {
   width: 13rem;
 }
 
-.w-4\/5{
-  width: 80%;
-}
-
 .w-1\/4{
   width: 25%;
+}
+
+.w-4\/5{
+  width: 80%;
 }
 
 .w-6{
@@ -708,12 +809,44 @@ video {
   width: 50%;
 }
 
-.grow{
-  flex-grow: 1;
+.w-1{
+  width: 0.25rem;
 }
 
-.basis-1\/3{
-  flex-basis: 33.333333%;
+.w-1\/12{
+  width: 8.333333%;
+}
+
+.w-24{
+  width: 6rem;
+}
+
+.w-3\/4{
+  width: 75%;
+}
+
+.w-3{
+  width: 0.75rem;
+}
+
+.w-48{
+  width: 12rem;
+}
+
+.w-3\/5{
+  width: 60%;
+}
+
+.w-11\/12{
+  width: 91.666667%;
+}
+
+.w-56{
+  width: 14rem;
+}
+
+.w-96{
+  width: 24rem;
 }
 
 .-translate-y-full{
@@ -723,30 +856,6 @@ video {
 
 .translate-y-0{
   --tw-translate-y: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-full{
-  --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-0{
-  --tw-translate-x: 0px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-full{
-  --tw-translate-y: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-full{
-  --tw-translate-x: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.transform{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -762,12 +871,20 @@ video {
   flex-wrap: wrap;
 }
 
+.items-start{
+  align-items: flex-start;
+}
+
 .items-end{
   align-items: flex-end;
 }
 
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
 }
 
 .justify-end{
@@ -780,6 +897,10 @@ video {
 
 .justify-between{
   justify-content: space-between;
+}
+
+.justify-around{
+  justify-content: space-around;
 }
 
 .justify-evenly{
@@ -810,16 +931,34 @@ video {
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.overflow-y-hidden{
-  overflow-y: hidden;
+.space-x-5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.self-center{
+  align-self: center;
+}
+
+.overflow-hidden{
+  overflow: hidden;
 }
 
 .overflow-y-scroll{
   overflow-y: scroll;
-}
-
-.text-ellipsis{
-  text-overflow: ellipsis;
 }
 
 .rounded-full{
@@ -830,6 +969,18 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded{
+  border-radius: 0.25rem;
+}
+
+.rounded-3xl{
+  border-radius: 1.5rem;
+}
+
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
 .border{
   border-width: 1px;
 }
@@ -837,11 +988,6 @@ video {
 .border-slate-800{
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
-}
-
-.border-slate-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 
 .bg-slate-100{
@@ -864,18 +1010,23 @@ video {
   background-color: rgb(52 211 153 / var(--tw-bg-opacity));
 }
 
+.bg-transparent{
+  background-color: transparent;
+}
+
 .bg-slate-200{
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
-.bg-transparent{
-  background-color: transparent;
-}
-
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-slate-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
 .bg-cover{
@@ -902,20 +1053,20 @@ video {
   padding: 1rem;
 }
 
+.p-3{
+  padding: 0.75rem;
+}
+
 .p-20{
   padding: 5rem;
 }
 
-.p-1{
-  padding: 0.25rem;
+.p-6{
+  padding: 1.5rem;
 }
 
-.p-2{
-  padding: 0.5rem;
-}
-
-.p-3{
-  padding: 0.75rem;
+.p-10{
+  padding: 2.5rem;
 }
 
 .py-20{
@@ -948,19 +1099,19 @@ video {
   padding-bottom: 20rem;
 }
 
-.py-0{
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.py-0\.5{
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
-}
-
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .pt-8{
@@ -971,32 +1122,40 @@ video {
   padding-top: 0px;
 }
 
-.pb-20{
-  padding-bottom: 5rem;
-}
-
-.pt-10{
-  padding-top: 2.5rem;
-}
-
-.pb-5{
-  padding-bottom: 1.25rem;
+.pb-16{
+  padding-bottom: 4rem;
 }
 
 .pb-4{
   padding-bottom: 1rem;
 }
 
-.pb-10{
-  padding-bottom: 2.5rem;
+.pt-10{
+  padding-top: 2.5rem;
 }
 
-.pb-16{
-  padding-bottom: 4rem;
+.pb-20{
+  padding-bottom: 5rem;
+}
+
+.pb-40{
+  padding-bottom: 10rem;
+}
+
+.pb-1{
+  padding-bottom: 0.25rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
 }
 
 .text-center{
   text-align: center;
+}
+
+.text-justify{
+  text-align: justify;
 }
 
 .font-sans{
@@ -1037,6 +1196,16 @@ video {
   line-height: 1.75rem;
 }
 
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .font-light{
   font-weight: 300;
 }
@@ -1055,6 +1224,10 @@ video {
 
 .leading-tight{
   line-height: 1.25;
+}
+
+.leading-snug{
+  line-height: 1.375;
 }
 
 .text-white{
@@ -1078,30 +1251,20 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .filter{
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.transition-transform{
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition{
-  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-colors{
-  transition-property: color, background-color, border-color, fill, stroke, -webkit-text-decoration-color;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, -webkit-text-decoration-color;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .transition-all{
@@ -1110,24 +1273,12 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-1000{
-  transition-duration: 1000ms;
-}
-
-.duration-300{
-  transition-duration: 300ms;
-}
-
 .duration-500{
   transition-duration: 500ms;
 }
 
-.duration-200{
-  transition-duration: 200ms;
-}
-
-.duration-100{
-  transition-duration: 100ms;
+.duration-300{
+  transition-duration: 300ms;
 }
 
 .ease-in-out{
@@ -1147,18 +1298,6 @@ video {
   /* IE and Edge */
   scrollbar-width: none;
   /* Firefox */
-}
-
-.hover\:fixed:hover{
-  position: fixed;
-}
-
-.hover\:z-50:hover{
-  z-index: 50;
-}
-
-.hover\:z-0:hover{
-  z-index: 0;
 }
 
 .hover\:scale-125:hover{
@@ -1182,6 +1321,36 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:container{
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  @media (min-width: 480px){
+    .md\:container{
+      max-width: 480px;
+    }
+  }
+
+  @media (min-width: 768px){
+    .md\:container{
+      max-width: 768px;
+    }
+  }
+
+  @media (min-width: 976px){
+    .md\:container{
+      max-width: 976px;
+    }
+  }
+
+  @media (min-width: 1440px){
+    .md\:container{
+      max-width: 1440px;
+    }
+  }
+
   .md\:inline{
     display: inline;
   }
@@ -1196,6 +1365,14 @@ video {
 
   .md\:w-3\/4{
     width: 75%;
+  }
+
+  .md\:w-96{
+    width: 24rem;
+  }
+
+  .md\:flex-col{
+    flex-direction: column;
   }
 
   .md\:justify-between{
@@ -1213,8 +1390,20 @@ video {
 }
 
 @media (min-width: 976px){
+  .lg\:block{
+    display: block;
+  }
+
+  .lg\:inline-flex{
+    display: inline-flex;
+  }
+
   .lg\:w-6\/12{
     width: 50%;
+  }
+
+  .lg\:flex-col{
+    flex-direction: column;
   }
 
   .lg\:justify-around{
@@ -1227,16 +1416,16 @@ video {
     display: block;
   }
 
-  .xl\:flex{
-    display: flex;
-  }
-
   .xl\:w-4\/12{
     width: 33.333333%;
   }
 
   .xl\:w-1\/3{
     width: 33.333333%;
+  }
+
+  .xl\:pb-20{
+    padding-bottom: 5rem;
   }
 
   .xl\:text-8xl{
